projects/vb6parse/snapshots/syntax/library/functions/file/loc/loc_do_until.snap
---
source: projects/vb6parse/src/syntax/library/functions/file/loc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: UntilKeyword
          text: Until
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Loc
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: fileNum
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: GreaterThanOrEqualOperator
              text: ">="
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: targetPosition
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: GetStatement
              children:
                - kind: Whitespace
                  text: "                "
                - kind: GetKeyword
                  text: Get
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: Identifier
                      text: fileNum
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: buffer
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "            "
        - kind: LoopKeyword
          text: Loop
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
